# hybrid-dsp-plugin

./: .gitignore  CMakeLists.txt  README.md
Source/DSP/: IDspModule.h
Source/DSP/ERA/: EraEffect.h  EraProcessor.h
Source/Parameters/: ParameterLayout.cpp  ParameterLayout.h
